refactor: group params