@@ -11,7 +11,6 @@ import org.springframework.web.client.RestTemplate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class NewsService {
@@ -19,7 +18,7 @@ public class NewsService {
     @Value("${gnews.api.key}")
     private String gnewsApiKey;
 
-    private static final String GNEWS_API_URL = "https://gnews.io/api/v4/search?q=example&lang=en&country=us&max=10";
+    private static final String GNEWS_API_URL = "https://gnews.io/api/v4/search";
 
     private final RestTemplate restTemplate;
 
@@ -29,19 +28,34 @@ public class NewsService {
     }
 
     @Cacheable("newsArticles")
-    public List<NewsArticle> fetchNewsArticles(int count) {
+    public List<NewsArticle> findNewsArticles(int count) {
         String apiUrl = GNEWS_API_URL + "&apikey=" + gnewsApiKey;
         NewsApiResponse response = restTemplate.getForObject(apiUrl, NewsApiResponse.class);
         return Objects.requireNonNull(response)
             .getArticles()
             .stream()
             .limit(count)
-            .collect(Collectors.toList());
+            .toList();
     }
+
     @Cacheable("newsArticles")
-    public List<NewsArticle> searchNewsArticles(String keyword) {
-        String apiUrl = GNEWS_API_URL.replace("{query}", keyword);
-        NewsArticle[] articles = restTemplate.getForObject(apiUrl, NewsArticle[].class);
-        return Arrays.asList(articles != null ? articles : new NewsArticle[0]);
+    public List<NewsArticle> findNewsArticles(String query, String title, String author, int count) {
+        StringBuilder apiUrlBuilder = new StringBuilder(GNEWS_API_URL)
+            .append("?apikey=").append(gnewsApiKey)
+            .append("&max=").append(count);
+
+        if (query != null && !query.isEmpty()) {
+            apiUrlBuilder.append("&q=").append(query);
+        }
+        if (title != null && !title.isEmpty()) {
+            apiUrlBuilder.append("&title=").append(title);
+        }
+        if (author != null && !author.isEmpty()) {
+            apiUrlBuilder.append("&author=").append(author);
+        }
+
+        NewsApiResponse response = restTemplate.getForObject(apiUrlBuilder.toString(), NewsApiResponse.class);
+
+        return Arrays.asList(response != null ? response.getArticles().toArray(new NewsArticle[0]) : new NewsArticle[0]);
     }
 }
